added retrofit singleton

--- a/app/src/main/res/layout/fragment_owners.xml
+++ b/app/src/main/res/layout/fragment_owners.xml
@@ -4,6 +4,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <!-- TODO: Add UI elements for LandlordsFragment -->
+    <!-- TODO: Add UI elements for OwnersFragment -->
 
 </LinearLayout>
