--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -14,6 +14,6 @@
         android:id="@+id/btnLandlords"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Landlords" />
+        android:text="Owners" />
 
 </LinearLayout>
