--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,7 +13,7 @@
             app:destination="@id/tenantsFragment" />
         <action
             android:id="@+id/action_mainFragment_to_landlordsFragment"
-            app:destination="@id/landlordsFragment" />
+            app:destination="@id/OwnersFragment" />
     </fragment>
 
     <fragment
@@ -22,8 +22,8 @@
         android:label="Tenants Fragment" />
 
     <fragment
-        android:id="@+id/landlordsFragment"
-        android:name="com.example.rentmyproperty.ui.fragments.LandlordsFragment"
-        android:label="Landlords Fragment" />
+        android:id="@+id/OwnersFragment"
+        android:name="com.example.rentmyproperty.ui.fragments.OwnersFragment"
+        android:label="Owners Fragment" />
 
 </navigation>
