Added custom toolbar with backbutton

--- a/app/src/main/res/layout/fragment_owners.xml
+++ b/app/src/main/res/layout/fragment_owners.xml
@@ -5,5 +5,7 @@
     android:orientation="vertical">
 
     <!-- TODO: Add UI elements for OwnersFragment -->
+    <include
+        layout="@layout/custom_toolbar"/>
 
 </LinearLayout>
