--- a/app/src/main/res/layout/fragment_tenants.xml
+++ b/app/src/main/res/layout/fragment_tenants.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <!-- TODO: Add UI elements for TenantsFragment -->
+    <include
+        layout="@layout/custom_toolbar"/>
 
 </LinearLayout>
